# python-env-with-uv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
examples/: example.py
src/python_env_with_uv/: __init__.py  sample.py
tests/: test_sample.py
