[project]
name = "python-env-with-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NakuRei", email = "nakurei7901@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lxml>=6.0.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py314"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",  # print
    "S101",  # assert
    "D203",  # incorrect blank line before class docstring
    "D213",  # multi-line docstring summary should start at the first line
    "COM812",  # trailing comma conflicts with formatter
    "EM101",  # allow raw string in exception
    "EM102",  # allow f-string in exception
    "TRY003",  # allow rising vanilla exception
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = [
    "INP001",  # allow missing an __init__.py file
    "ERA001",  # allow commented-out code
]
"tests/**" = [
    "INP001",  # allow missing an __init__.py file
    "PLR2004",  # allow magic numbers
    "ANN201",  # allow missing return type annotation
    "ANN401",  # use Any for arguments type annotation
    "D102",  # allow missing docstring in public method
    "D401",  # non-imperative-mood in docstring
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
allow_redefinition_new = false
allow_redefinition = false
strict_equality = true
implicit_reexport = false
strict_equality_for_none = true
show_error_context = true
show_column_numbers = true
pretty = true
color_output = true
error_summary = true
show_traceback = false
# any_exprs_report = "mypy_reports/any_exprs_report"
# html_report = "mypy_reports/html_report"
# txt_report = "mypy_reports/txt_report"
warn_unused_configs = true

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "def __str__",
    "def __repr__",
    "raise NotImplementedError",
    "raise AssertionError",
]
